fixed navbar alignment

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,11 @@
+/* body {
+  margin: 0;
+  padding: 0;
+} */
 .navbar{
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   z-index: 1000;
   display: flex;
